# apitest

./: .travis.yml  README.md  pyproject.toml
apitest/: api.py
tests/: conftest.py  test_core.py
tests/api/: httpbin.py
