[tool.poetry]
name = "apitest"
version = "0.1.0"
description = "API test framework with pytest and requests"
authors = ["Your Name <you@example.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.4.3"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
coverage = "^5.2"
coveralls = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
